[gd_scene load_steps=12 format=4 uid="uid://dn8d5l7xn6mhg"]

[ext_resource type="Script" uid="uid://d3tnfmqrs6bls" path="res://source/levels/level1/level1.gd" id="1_27su2"]
[ext_resource type="TileSet" uid="uid://dbuoem2h83kg4" path="res://source/levels/levels_tile_set.tres" id="2_p21y6"]
[ext_resource type="PackedScene" uid="uid://ce03tgyb1xpta" path="res://source/buildings/castle/Castle.tscn" id="3_ho887"]
[ext_resource type="Script" uid="uid://uctgg1bdix62" path="res://source/controls/drop_control.gd" id="4_b6prr"]
[ext_resource type="Script" uid="uid://dbrdfj5xhpync" path="res://source/controls/drop_area.gd" id="5_ocgwi"]
[ext_resource type="PackedScene" uid="uid://3vrv2phvtk8g" path="res://source/GUI/side_menu/SideMenu.tscn" id="6_3eaae"]
[ext_resource type="StyleBox" uid="uid://b1q0w0d2ul4lb" path="res://source/themes/normal_paper_background_pannel.tres" id="7_0vf1f"]
[ext_resource type="PackedScene" uid="uid://cqom6kxl3fsjd" path="res://source/GUI/upgrade_window/upgrade_window.tscn" id="7_cn2cc"]
[ext_resource type="AudioStream" uid="uid://tyb7b87avs0m" path="res://assets/music/Loop_Market_Day.mp3" id="9_kf0gc"]
[ext_resource type="PackedScene" uid="uid://bi0lmgp8lrbfh" path="res://source/GUI/game_over/game_over.tscn" id="10_vmlou"]

[sub_resource type="Curve2D" id="Curve2D_h4l07"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -78, 282, 0, 0, 0, 0, 280, 287, 0, 0, 0, 0, 283, 542, 0, 0, 0, 0, 156, 545, 0, 0, 0, 0, 156, 733, 0, 0, 0, 0, 351, 733, 0, 0, 0, 0, 353, 861, -0.620921, 0, 0.620921, 0, 546, 856, -1.86276, 0.620921, 1.86276, -0.620921, 548, 546, 0, 0, 0, 0, 731, 545, 0, 0, 0, 0, 737, 347, 0, 0, 0, 0, 862, 347, 0, 0, 0, 0, 868, 725, 0, 0, 0, 0, 1057, 728, 0, 0, 0, 0, 1057, 604, 0, 0, 0, 0, 1245, 604, 0, 0, 0, 0, 1247, 300)
}
point_count = 17

[node name="Level1" type="Node2D"]
script = ExtResource("1_27su2")

[node name="Layers" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Water" type="TileMapLayer" parent="Layers"]
tile_map_data = PackedByteArray("AAAiABMAAgAAAAAAAAAiABIAAgAAAAAAAAAiABEAAgAAAAAAAAAiABAAAgAAAAAAAAAiAA8AAgAAAAAAAAAiAA4AAgAAAAAAAAAiAA0AAgAAAAAAAAAiAAwAAgAAAAAAAAAiAAsAAgAAAAAAAAAiAAoAAgAAAAAAAAAiAAkAAgAAAAAAAAAiAAgAAgAAAAAAAAAiAAcAAgAAAAAAAAAiAAYAAgAAAAAAAAAiAAUAAgAAAAAAAAAiAAQAAgAAAAAAAAAiAAMAAgAAAAAAAAAiAAIAAgAAAAAAAAAiAAEAAgAAAAAAAAAiAAAAAgAAAAAAAAAiAP//AgAAAAAAAAAiAP7/AgAAAAAAAAAhABMAAgAAAAAAAAAhABIAAgAAAAAAAAAhABEAAgAAAAAAAAAhABAAAgAAAAAAAAAhAA8AAgAAAAAAAAAhAA4AAgAAAAAAAAAhAA0AAgAAAAAAAAAhAAwAAgAAAAAAAAAhAAsAAgAAAAAAAAAhAAoAAgAAAAAAAAAhAAkAAgAAAAAAAAAhAAgAAgAAAAAAAAAhAAcAAgAAAAAAAAAhAAYAAgAAAAAAAAAhAAUAAgAAAAAAAAAhAAQAAgAAAAAAAAAhAAMAAgAAAAAAAAAhAAIAAgAAAAAAAAAhAAEAAgAAAAAAAAAhAAAAAgAAAAAAAAAhAP//AgAAAAAAAAAhAP7/AgAAAAAAAAAgABMAAgAAAAAAAAAgABIAAgAAAAAAAAAgABEAAgAAAAAAAAAgABAAAgAAAAAAAAAgAA8AAgAAAAAAAAAgAA4AAgAAAAAAAAAgAA0AAgAAAAAAAAAgAAwAAgAAAAAAAAAgAAsAAgAAAAAAAAAgAAoAAgAAAAAAAAAgAAkAAgAAAAAAAAAgAAgAAgAAAAAAAAAgAAcAAgAAAAAAAAAgAAYAAgAAAAAAAAAgAAUAAgAAAAAAAAAgAAQAAgAAAAAAAAAgAAMAAgAAAAAAAAAgAAIAAgAAAAAAAAAgAAEAAgAAAAAAAAAgAAAAAgAAAAAAAAAgAP//AgAAAAAAAAAgAP7/AgAAAAAAAAAfABMAAgAAAAAAAAAfABIAAgAAAAAAAAAfABEAAgAAAAAAAAAfABAAAgAAAAAAAAAfAA8AAgAAAAAAAAAfAA4AAgAAAAAAAAAfAA0AAgAAAAAAAAAfAAwAAgAAAAAAAAAfAAsAAgAAAAAAAAAfAAoAAgAAAAAAAAAfAAkAAgAAAAAAAAAfAAgAAgAAAAAAAAAfAAcAAgAAAAAAAAAfAAYAAgAAAAAAAAAfAAUAAgAAAAAAAAAfAAQAAgAAAAAAAAAfAAMAAgAAAAAAAAAfAAIAAgAAAAAAAAAfAAEAAgAAAAAAAAAfAAAAAgAAAAAAAAAfAP//AgAAAAAAAAAfAP7/AgAAAAAAAAAeABMAAgAAAAAAAAAeABIAAgAAAAAAAAAeABEAAgAAAAAAAAAeABAAAgAAAAAAAAAeAA8AAgAAAAAAAAAeAA4AAgAAAAAAAAAeAA0AAgAAAAAAAAAeAAwAAgAAAAAAAAAeAAsAAgAAAAAAAAAeAAoAAgAAAAAAAAAeAAkAAgAAAAAAAAAeAAgAAgAAAAAAAAAeAAcAAgAAAAAAAAAeAAYAAgAAAAAAAAAeAAUAAgAAAAAAAAAeAAQAAgAAAAAAAAAeAAMAAgAAAAAAAAAeAAIAAgAAAAAAAAAeAAEAAgAAAAAAAAAeAAAAAgAAAAAAAAAeAP//AgAAAAAAAAAeAP7/AgAAAAAAAAAdABMAAgAAAAAAAAAdABIAAgAAAAAAAAAdABEAAgAAAAAAAAAdABAAAgAAAAAAAAAdAA8AAgAAAAAAAAAdAA4AAgAAAAAAAAAdAA0AAgAAAAAAAAAdAAwAAgAAAAAAAAAdAAsAAgAAAAAAAAAdAAoAAgAAAAAAAAAdAAkAAgAAAAAAAAAdAAgAAgAAAAAAAAAdAAcAAgAAAAAAAAAdAAYAAgAAAAAAAAAdAAUAAgAAAAAAAAAdAAQAAgAAAAAAAAAdAAMAAgAAAAAAAAAdAAIAAgAAAAAAAAAdAAEAAgAAAAAAAAAdAAAAAgAAAAAAAAAdAP//AgAAAAAAAAAdAP7/AgAAAAAAAAAcABMAAgAAAAAAAAAcABIAAgAAAAAAAAAcABEAAgAAAAAAAAAcABAAAgAAAAAAAAAcAA8AAgAAAAAAAAAcAA4AAgAAAAAAAAAcAA0AAgAAAAAAAAAcAAwAAgAAAAAAAAAcAAsAAgAAAAAAAAAcAAoAAgAAAAAAAAAcAAkAAgAAAAAAAAAcAAgAAgAAAAAAAAAcAAcAAgAAAAAAAAAcAAYAAgAAAAAAAAAcAAUAAgAAAAAAAAAcAAQAAgAAAAAAAAAcAAMAAgAAAAAAAAAcAAIAAgAAAAAAAAAcAAEAAgAAAAAAAAAcAAAAAgAAAAAAAAAcAP//AgAAAAAAAAAcAP7/AgAAAAAAAAAbABMAAgAAAAAAAAAbABIAAgAAAAAAAAAbABEAAgAAAAAAAAAbABAAAgAAAAAAAAAbAA8AAgAAAAAAAAAbAA4AAgAAAAAAAAAbAA0AAgAAAAAAAAAbAAwAAgAAAAAAAAAbAAsAAgAAAAAAAAAbAAoAAgAAAAAAAAAbAAkAAgAAAAAAAAAbAAgAAgAAAAAAAAAbAAcAAgAAAAAAAAAbAAYAAgAAAAAAAAAbAAUAAgAAAAAAAAAbAAQAAgAAAAAAAAAbAAMAAgAAAAAAAAAbAAIAAgAAAAAAAAAbAAEAAgAAAAAAAAAbAAAAAgAAAAAAAAAbAP//AgAAAAAAAAAbAP7/AgAAAAAAAAAaABMAAgAAAAAAAAAaABIAAgAAAAAAAAAaABEAAgAAAAAAAAAaABAAAgAAAAAAAAAaAA8AAgAAAAAAAAAaAA4AAgAAAAAAAAAaAA0AAgAAAAAAAAAaAAwAAgAAAAAAAAAaAAsAAgAAAAAAAAAaAAoAAgAAAAAAAAAaAAkAAgAAAAAAAAAaAAgAAgAAAAAAAAAaAAcAAgAAAAAAAAAaAAYAAgAAAAAAAAAaAAUAAgAAAAAAAAAaAAQAAgAAAAAAAAAaAAMAAgAAAAAAAAAaAAIAAgAAAAAAAAAaAAEAAgAAAAAAAAAaAAAAAgAAAAAAAAAaAP//AgAAAAAAAAAaAP7/AgAAAAAAAAAZABMAAgAAAAAAAAAZABIAAgAAAAAAAAAZABEAAgAAAAAAAAAZABAAAgAAAAAAAAAZAA8AAgAAAAAAAAAZAA4AAgAAAAAAAAAZAA0AAgAAAAAAAAAZAAwAAgAAAAAAAAAZAAsAAgAAAAAAAAAZAAoAAgAAAAAAAAAZAAkAAgAAAAAAAAAZAAgAAgAAAAAAAAAZAAcAAgAAAAAAAAAZAAYAAgAAAAAAAAAZAAUAAgAAAAAAAAAZAAQAAgAAAAAAAAAZAAMAAgAAAAAAAAAZAAIAAgAAAAAAAAAZAAEAAgAAAAAAAAAZAAAAAgAAAAAAAAAZAP//AgAAAAAAAAAZAP7/AgAAAAAAAAAYABMAAgAAAAAAAAAYABIAAgAAAAAAAAAYABEAAgAAAAAAAAAYABAAAgAAAAAAAAAYAA8AAgAAAAAAAAAYAA4AAgAAAAAAAAAYAA0AAgAAAAAAAAAYAAwAAgAAAAAAAAAYAAsAAgAAAAAAAAAYAAoAAgAAAAAAAAAYAAkAAgAAAAAAAAAYAAgAAgAAAAAAAAAYAAcAAgAAAAAAAAAYAAYAAgAAAAAAAAAYAAUAAgAAAAAAAAAYAAQAAgAAAAAAAAAYAAMAAgAAAAAAAAAYAAIAAgAAAAAAAAAYAAEAAgAAAAAAAAAYAAAAAgAAAAAAAAAYAP//AgAAAAAAAAAYAP7/AgAAAAAAAAAXABMAAgAAAAAAAAAXABIAAgAAAAAAAAAXABEAAgAAAAAAAAAXABAAAgAAAAAAAAAXAA8AAgAAAAAAAAAXAA4AAgAAAAAAAAAXAA0AAgAAAAAAAAAXAAwAAgAAAAAAAAAXAAsAAgAAAAAAAAAXAAoAAgAAAAAAAAAXAAkAAgAAAAAAAAAXAAgAAgAAAAAAAAAXAAcAAgAAAAAAAAAXAAYAAgAAAAAAAAAXAAUAAgAAAAAAAAAXAAQAAgAAAAAAAAAXAAMAAgAAAAAAAAAXAAIAAgAAAAAAAAAXAAEAAgAAAAAAAAAXAAAAAgAAAAAAAAAXAP//AgAAAAAAAAAXAP7/AgAAAAAAAAAWABMAAgAAAAAAAAAWABIAAgAAAAAAAAAWABEAAgAAAAAAAAAWABAAAgAAAAAAAAAWAA8AAgAAAAAAAAAWAA4AAgAAAAAAAAAWAA0AAgAAAAAAAAAWAAwAAgAAAAAAAAAWAAsAAgAAAAAAAAAWAAoAAgAAAAAAAAAWAAkAAgAAAAAAAAAWAAgAAgAAAAAAAAAWAAcAAgAAAAAAAAAWAAYAAgAAAAAAAAAWAAUAAgAAAAAAAAAWAAQAAgAAAAAAAAAWAAMAAgAAAAAAAAAWAAIAAgAAAAAAAAAWAAEAAgAAAAAAAAAWAAAAAgAAAAAAAAAWAP//AgAAAAAAAAAWAP7/AgAAAAAAAAAVABMAAgAAAAAAAAAVABIAAgAAAAAAAAAVABEAAgAAAAAAAAAVABAAAgAAAAAAAAAVAA8AAgAAAAAAAAAVAA4AAgAAAAAAAAAVAA0AAgAAAAAAAAAVAAwAAgAAAAAAAAAVAAsAAgAAAAAAAAAVAAoAAgAAAAAAAAAVAAkAAgAAAAAAAAAVAAgAAgAAAAAAAAAVAAcAAgAAAAAAAAAVAAYAAgAAAAAAAAAVAAUAAgAAAAAAAAAVAAQAAgAAAAAAAAAVAAMAAgAAAAAAAAAVAAIAAgAAAAAAAAAVAAEAAgAAAAAAAAAVAAAAAgAAAAAAAAAVAP//AgAAAAAAAAAVAP7/AgAAAAAAAAAUABMAAgAAAAAAAAAUABIAAgAAAAAAAAAUABEAAgAAAAAAAAAUABAAAgAAAAAAAAAUAA8AAgAAAAAAAAAUAA4AAgAAAAAAAAAUAA0AAgAAAAAAAAAUAAwAAgAAAAAAAAAUAAsAAgAAAAAAAAAUAAoAAgAAAAAAAAAUAAkAAgAAAAAAAAAUAAgAAgAAAAAAAAAUAAcAAgAAAAAAAAAUAAYAAgAAAAAAAAAUAAUAAgAAAAAAAAAUAAQAAgAAAAAAAAAUAAMAAgAAAAAAAAAUAAIAAgAAAAAAAAAUAAEAAgAAAAAAAAAUAAAAAgAAAAAAAAAUAP//AgAAAAAAAAAUAP7/AgAAAAAAAAATABMAAgAAAAAAAAATABIAAgAAAAAAAAATABEAAgAAAAAAAAATABAAAgAAAAAAAAATAA8AAgAAAAAAAAATAA4AAgAAAAAAAAATAA0AAgAAAAAAAAATAAwAAgAAAAAAAAATAAsAAgAAAAAAAAATAAoAAgAAAAAAAAATAAkAAgAAAAAAAAATAAgAAgAAAAAAAAATAAcAAgAAAAAAAAATAAYAAgAAAAAAAAATAAUAAgAAAAAAAAATAAQAAgAAAAAAAAATAAMAAgAAAAAAAAATAAIAAgAAAAAAAAATAAEAAgAAAAAAAAATAAAAAgAAAAAAAAATAP//AgAAAAAAAAATAP7/AgAAAAAAAAASABMAAgAAAAAAAAASABIAAgAAAAAAAAASABEAAgAAAAAAAAASABAAAgAAAAAAAAASAA8AAgAAAAAAAAASAA4AAgAAAAAAAAASAA0AAgAAAAAAAAASAAwAAgAAAAAAAAASAAsAAgAAAAAAAAASAAoAAgAAAAAAAAASAAkAAgAAAAAAAAASAAgAAgAAAAAAAAASAAcAAgAAAAAAAAASAAYAAgAAAAAAAAASAAUAAgAAAAAAAAASAAQAAgAAAAAAAAASAAMAAgAAAAAAAAASAAIAAgAAAAAAAAASAAEAAgAAAAAAAAASAAAAAgAAAAAAAAASAP//AgAAAAAAAAASAP7/AgAAAAAAAAARABMAAgAAAAAAAAARABIAAgAAAAAAAAARABEAAgAAAAAAAAARABAAAgAAAAAAAAARAA8AAgAAAAAAAAARAA4AAgAAAAAAAAARAA0AAgAAAAAAAAARAAwAAgAAAAAAAAARAAsAAgAAAAAAAAARAAoAAgAAAAAAAAARAAkAAgAAAAAAAAARAAgAAgAAAAAAAAARAAcAAgAAAAAAAAARAAYAAgAAAAAAAAARAAUAAgAAAAAAAAARAAQAAgAAAAAAAAARAAMAAgAAAAAAAAARAAIAAgAAAAAAAAARAAEAAgAAAAAAAAARAAAAAgAAAAAAAAARAP//AgAAAAAAAAARAP7/AgAAAAAAAAAQABMAAgAAAAAAAAAQABIAAgAAAAAAAAAQABEAAgAAAAAAAAAQABAAAgAAAAAAAAAQAA8AAgAAAAAAAAAQAA4AAgAAAAAAAAAQAA0AAgAAAAAAAAAQAAwAAgAAAAAAAAAQAAsAAgAAAAAAAAAQAAoAAgAAAAAAAAAQAAkAAgAAAAAAAAAQAAgAAgAAAAAAAAAQAAcAAgAAAAAAAAAQAAYAAgAAAAAAAAAQAAUAAgAAAAAAAAAQAAQAAgAAAAAAAAAQAAMAAgAAAAAAAAAQAAIAAgAAAAAAAAAQAAEAAgAAAAAAAAAQAAAAAgAAAAAAAAAQAP//AgAAAAAAAAAQAP7/AgAAAAAAAAAPABMAAgAAAAAAAAAPABIAAgAAAAAAAAAPABEAAgAAAAAAAAAPABAAAgAAAAAAAAAPAA8AAgAAAAAAAAAPAA4AAgAAAAAAAAAPAA0AAgAAAAAAAAAPAAwAAgAAAAAAAAAPAAsAAgAAAAAAAAAPAAoAAgAAAAAAAAAPAAkAAgAAAAAAAAAPAAgAAgAAAAAAAAAPAAcAAgAAAAAAAAAPAAYAAgAAAAAAAAAPAAUAAgAAAAAAAAAPAAQAAgAAAAAAAAAPAAMAAgAAAAAAAAAPAAIAAgAAAAAAAAAPAAEAAgAAAAAAAAAPAAAAAgAAAAAAAAAPAP//AgAAAAAAAAAPAP7/AgAAAAAAAAAOABMAAgAAAAAAAAAOABIAAgAAAAAAAAAOABEAAgAAAAAAAAAOABAAAgAAAAAAAAAOAA8AAgAAAAAAAAAOAA4AAgAAAAAAAAAOAA0AAgAAAAAAAAAOAAwAAgAAAAAAAAAOAAsAAgAAAAAAAAAOAAoAAgAAAAAAAAAOAAkAAgAAAAAAAAAOAAgAAgAAAAAAAAAOAAcAAgAAAAAAAAAOAAYAAgAAAAAAAAAOAAUAAgAAAAAAAAAOAAQAAgAAAAAAAAAOAAMAAgAAAAAAAAAOAAIAAgAAAAAAAAAOAAEAAgAAAAAAAAAOAAAAAgAAAAAAAAAOAP//AgAAAAAAAAAOAP7/AgAAAAAAAAANABMAAgAAAAAAAAANABIAAgAAAAAAAAANABEAAgAAAAAAAAANABAAAgAAAAAAAAANAA8AAgAAAAAAAAANAA4AAgAAAAAAAAANAA0AAgAAAAAAAAANAAwAAgAAAAAAAAANAAsAAgAAAAAAAAANAAoAAgAAAAAAAAANAAkAAgAAAAAAAAANAAgAAgAAAAAAAAANAAcAAgAAAAAAAAANAAYAAgAAAAAAAAANAAUAAgAAAAAAAAANAAQAAgAAAAAAAAANAAMAAgAAAAAAAAANAAIAAgAAAAAAAAANAAEAAgAAAAAAAAANAAAAAgAAAAAAAAANAP//AgAAAAAAAAANAP7/AgAAAAAAAAAMABMAAgAAAAAAAAAMABIAAgAAAAAAAAAMABEAAgAAAAAAAAAMABAAAgAAAAAAAAAMAA8AAgAAAAAAAAAMAA4AAgAAAAAAAAAMAA0AAgAAAAAAAAAMAAwAAgAAAAAAAAAMAAsAAgAAAAAAAAAMAAoAAgAAAAAAAAAMAAkAAgAAAAAAAAAMAAgAAgAAAAAAAAAMAAcAAgAAAAAAAAAMAAYAAgAAAAAAAAAMAAUAAgAAAAAAAAAMAAQAAgAAAAAAAAAMAAMAAgAAAAAAAAAMAAIAAgAAAAAAAAAMAAEAAgAAAAAAAAAMAAAAAgAAAAAAAAAMAP//AgAAAAAAAAAMAP7/AgAAAAAAAAALABMAAgAAAAAAAAALABIAAgAAAAAAAAALABEAAgAAAAAAAAALABAAAgAAAAAAAAALAA8AAgAAAAAAAAALAA4AAgAAAAAAAAALAA0AAgAAAAAAAAALAAwAAgAAAAAAAAALAAsAAgAAAAAAAAALAAoAAgAAAAAAAAALAAkAAgAAAAAAAAALAAgAAgAAAAAAAAALAAcAAgAAAAAAAAALAAYAAgAAAAAAAAALAAUAAgAAAAAAAAALAAQAAgAAAAAAAAALAAMAAgAAAAAAAAALAAIAAgAAAAAAAAALAAEAAgAAAAAAAAALAAAAAgAAAAAAAAALAP//AgAAAAAAAAALAP7/AgAAAAAAAAAKABMAAgAAAAAAAAAKABIAAgAAAAAAAAAKABEAAgAAAAAAAAAKABAAAgAAAAAAAAAKAA8AAgAAAAAAAAAKAA4AAgAAAAAAAAAKAA0AAgAAAAAAAAAKAAwAAgAAAAAAAAAKAAsAAgAAAAAAAAAKAAoAAgAAAAAAAAAKAAkAAgAAAAAAAAAKAAgAAgAAAAAAAAAKAAcAAgAAAAAAAAAKAAYAAgAAAAAAAAAKAAUAAgAAAAAAAAAKAAQAAgAAAAAAAAAKAAMAAgAAAAAAAAAKAAIAAgAAAAAAAAAKAAEAAgAAAAAAAAAKAAAAAgAAAAAAAAAKAP//AgAAAAAAAAAKAP7/AgAAAAAAAAAJABMAAgAAAAAAAAAJABIAAgAAAAAAAAAJABEAAgAAAAAAAAAJABAAAgAAAAAAAAAJAA8AAgAAAAAAAAAJAA4AAgAAAAAAAAAJAA0AAgAAAAAAAAAJAAwAAgAAAAAAAAAJAAsAAgAAAAAAAAAJAAoAAgAAAAAAAAAJAAkAAgAAAAAAAAAJAAgAAgAAAAAAAAAJAAcAAgAAAAAAAAAJAAYAAgAAAAAAAAAJAAUAAgAAAAAAAAAJAAQAAgAAAAAAAAAJAAMAAgAAAAAAAAAJAAIAAgAAAAAAAAAJAAEAAgAAAAAAAAAJAAAAAgAAAAAAAAAJAP//AgAAAAAAAAAJAP7/AgAAAAAAAAAIABMAAgAAAAAAAAAIABIAAgAAAAAAAAAIABEAAgAAAAAAAAAIABAAAgAAAAAAAAAIAA8AAgAAAAAAAAAIAA4AAgAAAAAAAAAIAA0AAgAAAAAAAAAIAAwAAgAAAAAAAAAIAAsAAgAAAAAAAAAIAAoAAgAAAAAAAAAIAAkAAgAAAAAAAAAIAAgAAgAAAAAAAAAIAAcAAgAAAAAAAAAIAAYAAgAAAAAAAAAIAAUAAgAAAAAAAAAIAAQAAgAAAAAAAAAIAAMAAgAAAAAAAAAIAAIAAgAAAAAAAAAIAAEAAgAAAAAAAAAIAAAAAgAAAAAAAAAIAP//AgAAAAAAAAAIAP7/AgAAAAAAAAAHABMAAgAAAAAAAAAHABIAAgAAAAAAAAAHABEAAgAAAAAAAAAHABAAAgAAAAAAAAAHAA8AAgAAAAAAAAAHAA4AAgAAAAAAAAAHAA0AAgAAAAAAAAAHAAwAAgAAAAAAAAAHAAsAAgAAAAAAAAAHAAoAAgAAAAAAAAAHAAkAAgAAAAAAAAAHAAgAAgAAAAAAAAAHAAcAAgAAAAAAAAAHAAYAAgAAAAAAAAAHAAUAAgAAAAAAAAAHAAQAAgAAAAAAAAAHAAMAAgAAAAAAAAAHAAIAAgAAAAAAAAAHAAEAAgAAAAAAAAAHAAAAAgAAAAAAAAAHAP//AgAAAAAAAAAHAP7/AgAAAAAAAAAGABMAAgAAAAAAAAAGABIAAgAAAAAAAAAGABEAAgAAAAAAAAAGABAAAgAAAAAAAAAGAA8AAgAAAAAAAAAGAA4AAgAAAAAAAAAGAA0AAgAAAAAAAAAGAAwAAgAAAAAAAAAGAAsAAgAAAAAAAAAGAAoAAgAAAAAAAAAGAAkAAgAAAAAAAAAGAAgAAgAAAAAAAAAGAAcAAgAAAAAAAAAGAAYAAgAAAAAAAAAGAAUAAgAAAAAAAAAGAAQAAgAAAAAAAAAGAAMAAgAAAAAAAAAGAAIAAgAAAAAAAAAGAAEAAgAAAAAAAAAGAAAAAgAAAAAAAAAGAP//AgAAAAAAAAAGAP7/AgAAAAAAAAAFABMAAgAAAAAAAAAFABIAAgAAAAAAAAAFABEAAgAAAAAAAAAFABAAAgAAAAAAAAAFAA8AAgAAAAAAAAAFAA4AAgAAAAAAAAAFAA0AAgAAAAAAAAAFAAwAAgAAAAAAAAAFAAsAAgAAAAAAAAAFAAoAAgAAAAAAAAAFAAkAAgAAAAAAAAAFAAgAAgAAAAAAAAAFAAcAAgAAAAAAAAAFAAYAAgAAAAAAAAAFAAUAAgAAAAAAAAAFAAQAAgAAAAAAAAAFAAMAAgAAAAAAAAAFAAIAAgAAAAAAAAAFAAEAAgAAAAAAAAAFAAAAAgAAAAAAAAAFAP//AgAAAAAAAAAFAP7/AgAAAAAAAAAEABMAAgAAAAAAAAAEABIAAgAAAAAAAAAEABEAAgAAAAAAAAAEABAAAgAAAAAAAAAEAA8AAgAAAAAAAAAEAA4AAgAAAAAAAAAEAA0AAgAAAAAAAAAEAAwAAgAAAAAAAAAEAAsAAgAAAAAAAAAEAAoAAgAAAAAAAAAEAAkAAgAAAAAAAAAEAAgAAgAAAAAAAAAEAAcAAgAAAAAAAAAEAAYAAgAAAAAAAAAEAAUAAgAAAAAAAAAEAAQAAgAAAAAAAAAEAAMAAgAAAAAAAAAEAAIAAgAAAAAAAAAEAAEAAgAAAAAAAAAEAAAAAgAAAAAAAAAEAP//AgAAAAAAAAAEAP7/AgAAAAAAAAADABMAAgAAAAAAAAADABIAAgAAAAAAAAADABEAAgAAAAAAAAADABAAAgAAAAAAAAADAA8AAgAAAAAAAAADAA4AAgAAAAAAAAADAA0AAgAAAAAAAAADAAwAAgAAAAAAAAADAAsAAgAAAAAAAAADAAoAAgAAAAAAAAADAAkAAgAAAAAAAAADAAgAAgAAAAAAAAADAAcAAgAAAAAAAAADAAYAAgAAAAAAAAADAAUAAgAAAAAAAAADAAQAAgAAAAAAAAADAAMAAgAAAAAAAAADAAIAAgAAAAAAAAADAAEAAgAAAAAAAAADAAAAAgAAAAAAAAADAP//AgAAAAAAAAADAP7/AgAAAAAAAAACABMAAgAAAAAAAAACABIAAgAAAAAAAAACABEAAgAAAAAAAAACABAAAgAAAAAAAAACAA8AAgAAAAAAAAACAA4AAgAAAAAAAAACAA0AAgAAAAAAAAACAAwAAgAAAAAAAAACAAsAAgAAAAAAAAACAAoAAgAAAAAAAAACAAkAAgAAAAAAAAACAAgAAgAAAAAAAAACAAcAAgAAAAAAAAACAAYAAgAAAAAAAAACAAUAAgAAAAAAAAACAAQAAgAAAAAAAAACAAMAAgAAAAAAAAACAAIAAgAAAAAAAAACAAEAAgAAAAAAAAACAAAAAgAAAAAAAAACAP//AgAAAAAAAAACAP7/AgAAAAAAAAABABMAAgAAAAAAAAABABIAAgAAAAAAAAABABEAAgAAAAAAAAABABAAAgAAAAAAAAABAA8AAgAAAAAAAAABAA4AAgAAAAAAAAABAA0AAgAAAAAAAAABAAwAAgAAAAAAAAABAAsAAgAAAAAAAAABAAoAAgAAAAAAAAABAAkAAgAAAAAAAAABAAgAAgAAAAAAAAABAAcAAgAAAAAAAAABAAYAAgAAAAAAAAABAAUAAgAAAAAAAAABAAQAAgAAAAAAAAABAAMAAgAAAAAAAAABAAIAAgAAAAAAAAABAAEAAgAAAAAAAAABAAAAAgAAAAAAAAABAP//AgAAAAAAAAABAP7/AgAAAAAAAAAAABMAAgAAAAAAAAAAABIAAgAAAAAAAAAAABEAAgAAAAAAAAAAABAAAgAAAAAAAAAAAA8AAgAAAAAAAAAAAA4AAgAAAAAAAAAAAA0AAgAAAAAAAAAAAAwAAgAAAAAAAAAAAAsAAgAAAAAAAAAAAAoAAgAAAAAAAAAAAAkAAgAAAAAAAAAAAAgAAgAAAAAAAAAAAAcAAgAAAAAAAAAAAAYAAgAAAAAAAAAAAAUAAgAAAAAAAAAAAAQAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAAAAgAAAAAAAAAAAP//AgAAAAAAAAAAAP7/AgAAAAAAAAD//xMAAgAAAAAAAAD//xIAAgAAAAAAAAD//xEAAgAAAAAAAAD//xAAAgAAAAAAAAD//w8AAgAAAAAAAAD//w4AAgAAAAAAAAD//w0AAgAAAAAAAAD//wwAAgAAAAAAAAD//wsAAgAAAAAAAAD//woAAgAAAAAAAAD//wkAAgAAAAAAAAD//wgAAgAAAAAAAAD//wcAAgAAAAAAAAD//wYAAgAAAAAAAAD//wUAAgAAAAAAAAD//wQAAgAAAAAAAAD//wMAAgAAAAAAAAD//wIAAgAAAAAAAAD//wEAAgAAAAAAAAD//wAAAgAAAAAAAAD/////AgAAAAAAAAD///7/AgAAAAAAAAD+/xMAAgAAAAAAAAD+/xIAAgAAAAAAAAD+/xEAAgAAAAAAAAD+/xAAAgAAAAAAAAD+/w8AAgAAAAAAAAD+/w4AAgAAAAAAAAD+/w0AAgAAAAAAAAD+/wwAAgAAAAAAAAD+/wsAAgAAAAAAAAD+/woAAgAAAAAAAAD+/wkAAgAAAAAAAAD+/wgAAgAAAAAAAAD+/wcAAgAAAAAAAAD+/wYAAgAAAAAAAAD+/wUAAgAAAAAAAAD+/wQAAgAAAAAAAAD+/wMAAgAAAAAAAAD+/wIAAgAAAAAAAAD+/wEAAgAAAAAAAAD+/wAAAgAAAAAAAAD+////AgAAAAAAAAD+//7/AgAAAAAAAAA=")
tile_set = ExtResource("2_p21y6")

[node name="Foam" type="TileMapLayer" parent="Layers"]
tile_map_data = PackedByteArray("AAABAA8ABgAAAAAAAAACAA8ABgAAAAAAAAADAA8ABgAAAAAAAAAEAA8ABgAAAAAAAAAFAA8ABgAAAAAAAAAGAA8ABgAAAAAAAAAHAA8ABgAAAAAAAAAIAA8ABgAAAAAAAAAJAA8ABgAAAAAAAAAKAA8ABgAAAAAAAAAKAA4ABgAAAAAAAAALAA4ABgAAAAAAAAAMAA4ABgAAAAAAAAANAA4ABgAAAAAAAAAOAA4ABgAAAAAAAAAPAA4ABgAAAAAAAAAQAA4ABgAAAAAAAAARAA4ABgAAAAAAAAASAA4ABgAAAAAAAAATAA4ABgAAAAAAAAATAA0ABgAAAAAAAAATAAwABgAAAAAAAAATAAsABgAAAAAAAAAUAAsABgAAAAAAAAAUAAoABgAAAAAAAAAUAAkABgAAAAAAAAAUAAgABgAAAAAAAAAUAAcABgAAAAAAAAAVAAcABgAAAAAAAAAWAAcABgAAAAAAAAAWAAYABgAAAAAAAAAWAAUABgAAAAAAAAAXAAUABgAAAAAAAAAXAAMABgAAAAAAAAAXAAQABgAAAAAAAAAXAAIABgAAAAAAAAABAA4ABgAAAAAAAAABAA0ABgAAAAAAAAABAAwABgAAAAAAAAABAAsABgAAAAAAAAABAAoABgAAAAAAAAABAAkABgAAAAAAAAABAAgABgAAAAAAAAABAAcABgAAAAAAAAABAAYABgAAAAAAAAABAAUABgAAAAAAAAABAAQABgAAAAAAAAABAAMABgAAAAAAAAACAAMABgAAAAAAAAADAAMABgAAAAAAAAAEAAMABgAAAAAAAAAFAAMABgAAAAAAAAAGAAMABgAAAAAAAAAHAAMABgAAAAAAAAAHAAIABgAAAAAAAAAIAAIABgAAAAAAAAAJAAIABgAAAAAAAAAKAAIABgAAAAAAAAALAAIABgAAAAAAAAALAAMABgAAAAAAAAAMAAMABgAAAAAAAAANAAMABgAAAAAAAAAOAAMABgAAAAAAAAAPAAMABgAAAAAAAAAQAAMABgAAAAAAAAAQAAIABgAAAAAAAAAQAAEABgAAAAAAAAARAAEABgAAAAAAAAASAAEABgAAAAAAAAATAAEABgAAAAAAAAAUAAEABgAAAAAAAAAVAAEABgAAAAAAAAAWAAEABgAAAAAAAAACAAAABgAAAAAAAAACAP//BgAAAAAAAAACAP7/BgAAAAAAAAABAAAABgAAAAAAAAAAAAAABgAAAAAAAAD//wAABgAAAAAAAAD+/wAABgAAAAAAAAA=")
tile_set = ExtResource("2_p21y6")

[node name="Rocks" type="TileMapLayer" parent="Layers"]
tile_map_data = PackedByteArray("AAAKAA4AAQACAAIAAAAJAA4AAQABAAQAAAAIAA4AAQABAAQAAAAHAA4AAQABAAQAAAAGAA4AAQABAAQAAAAFAA4AAQABAAQAAAAEAA4AAQABAAQAAAADAA4AAQABAAQAAAACAA4AAQABAAQAAAABAA4AAQAAAAQAAAATAA0AAQACAAQAAAASAA0AAQABAAQAAAARAA0AAQABAAQAAAAQAA0AAQABAAQAAAAPAA0AAQABAAQAAAAOAA0AAQABAAQAAAANAA0AAQABAAQAAAAMAA0AAQABAAQAAAALAA0AAQABAAQAAAAKAA0AAQAAAAAAAAAUAAoAAQADAAQAAAAWAAYAAQACAAQAAAAVAAYAAQABAAQAAAAUAAYAAQAAAAQAAAAXAAQAAQADAAQAAAA=")
tile_set = ExtResource("2_p21y6")

[node name="Grass" type="TileMapLayer" parent="Layers"]
tile_map_data = PackedByteArray("AAAKAA4AAAACAAIAAAAKAA0AAAABAAEAAAAKAAwAAAABAAEAAAAKAAsAAAABAAEAAAAKAAoAAAABAAEAAAAKAAkAAAABAAEAAAAKAAgAAAABAAEAAAAKAAcAAAABAAEAAAAKAAYAAAABAAEAAAAKAAUAAAABAAEAAAAKAAQAAAABAAEAAAAKAAMAAAABAAEAAAAJAA4AAAABAAIAAAAJAA0AAAABAAEAAAAJAAwAAAABAAEAAAAJAAsAAAABAAEAAAAJAAoAAAABAAEAAAAJAAkAAAABAAEAAAAJAAgAAAABAAEAAAAJAAcAAAABAAEAAAAJAAYAAAABAAEAAAAJAAUAAAABAAEAAAAJAAQAAAABAAEAAAAJAAMAAAABAAEAAAAIAA4AAAABAAIAAAAIAA0AAAABAAEAAAAIAAwAAAABAAEAAAAIAAsAAAABAAEAAAAIAAoAAAABAAEAAAAIAAkAAAABAAEAAAAIAAgAAAABAAEAAAAIAAcAAAABAAEAAAAIAAYAAAABAAEAAAAIAAUAAAABAAEAAAAIAAQAAAABAAEAAAAIAAMAAAABAAEAAAAHAA4AAAABAAIAAAAHAA0AAAABAAEAAAAHAAwAAAABAAEAAAAHAAsAAAABAAEAAAAHAAoAAAABAAEAAAAHAAkAAAABAAEAAAAHAAgAAAABAAEAAAAHAAcAAAABAAEAAAAHAAYAAAABAAEAAAAHAAUAAAABAAEAAAAHAAQAAAABAAEAAAAHAAMAAAABAAEAAAAGAA4AAAABAAIAAAAGAA0AAAABAAEAAAAGAAwAAAABAAEAAAAGAAsAAAABAAEAAAAGAAoAAAABAAEAAAAGAAkAAAABAAEAAAAGAAgAAAABAAEAAAAGAAcAAAABAAEAAAAGAAYAAAABAAEAAAAGAAUAAAABAAEAAAAGAAQAAAABAAEAAAAGAAMAAAABAAAAAAAFAA4AAAABAAIAAAAFAA0AAAABAAEAAAAFAAwAAAABAAEAAAAFAAsAAAABAAEAAAAFAAoAAAABAAEAAAAFAAkAAAABAAEAAAAFAAgAAAABAAEAAAAFAAcAAAABAAEAAAAFAAYAAAABAAEAAAAFAAUAAAABAAEAAAAFAAQAAAABAAEAAAAFAAMAAAABAAAAAAAEAA4AAAABAAIAAAAEAA0AAAABAAEAAAAEAAwAAAABAAEAAAAEAAsAAAABAAEAAAAEAAoAAAABAAEAAAAEAAkAAAABAAEAAAAEAAgAAAABAAEAAAAEAAcAAAABAAEAAAAEAAYAAAABAAEAAAAEAAUAAAABAAEAAAAEAAQAAAABAAEAAAAEAAMAAAABAAAAAAADAA4AAAABAAIAAAADAA0AAAABAAEAAAADAAwAAAABAAEAAAADAAsAAAABAAEAAAADAAoAAAABAAEAAAADAAkAAAABAAEAAAADAAgAAAABAAEAAAADAAcAAAABAAEAAAADAAYAAAABAAEAAAADAAUAAAABAAEAAAADAAQAAAABAAEAAAADAAMAAAABAAAAAAACAA4AAAABAAIAAAACAA0AAAABAAEAAAACAAwAAAABAAEAAAACAAsAAAABAAEAAAACAAoAAAABAAEAAAACAAkAAAABAAEAAAACAAgAAAABAAEAAAACAAcAAAABAAEAAAACAAYAAAABAAEAAAACAAUAAAABAAEAAAACAAQAAAABAAEAAAACAAMAAAABAAAAAAABAA4AAAAAAAIAAAABAA0AAAAAAAEAAAABAAwAAAAAAAEAAAABAAsAAAAAAAEAAAABAAoAAAAAAAEAAAABAAkAAAAAAAEAAAABAAgAAAAAAAEAAAABAAcAAAAAAAEAAAABAAYAAAAAAAEAAAABAAUAAAAAAAEAAAABAAQAAAAAAAEAAAABAAMAAAAAAAAAAAATAA0AAAACAAIAAAATAAwAAAACAAEAAAATAAsAAAACAAEAAAATAAoAAAABAAEAAAATAAkAAAABAAEAAAATAAgAAAABAAEAAAATAAcAAAABAAEAAAATAAYAAAABAAEAAAATAAUAAAABAAEAAAATAAQAAAABAAEAAAATAAMAAAABAAEAAAASAA0AAAABAAIAAAASAAwAAAABAAEAAAASAAsAAAABAAEAAAASAAoAAAABAAEAAAASAAkAAAABAAEAAAASAAgAAAABAAEAAAASAAcAAAABAAEAAAASAAYAAAABAAEAAAASAAUAAAABAAEAAAASAAQAAAABAAEAAAASAAMAAAABAAEAAAARAA0AAAABAAIAAAARAAwAAAABAAEAAAARAAsAAAABAAEAAAARAAoAAAABAAEAAAARAAkAAAABAAEAAAARAAgAAAABAAEAAAARAAcAAAABAAEAAAARAAYAAAABAAEAAAARAAUAAAABAAEAAAARAAQAAAABAAEAAAARAAMAAAABAAEAAAAQAA0AAAABAAIAAAAQAAwAAAABAAEAAAAQAAsAAAABAAEAAAAQAAoAAAABAAEAAAAQAAkAAAABAAEAAAAQAAgAAAABAAEAAAAQAAcAAAABAAEAAAAQAAYAAAABAAEAAAAQAAUAAAABAAEAAAAQAAQAAAABAAEAAAAQAAMAAAABAAEAAAAPAA0AAAABAAIAAAAPAAwAAAABAAEAAAAPAAsAAAABAAEAAAAPAAoAAAABAAEAAAAPAAkAAAABAAEAAAAPAAgAAAABAAEAAAAPAAcAAAABAAEAAAAPAAYAAAABAAEAAAAPAAUAAAABAAEAAAAPAAQAAAABAAEAAAAPAAMAAAABAAAAAAAOAA0AAAABAAIAAAAOAAwAAAABAAEAAAAOAAsAAAABAAEAAAAOAAoAAAABAAEAAAAOAAkAAAABAAEAAAAOAAgAAAABAAEAAAAOAAcAAAABAAEAAAAOAAYAAAABAAEAAAAOAAUAAAABAAEAAAAOAAQAAAABAAEAAAAOAAMAAAABAAAAAAANAA0AAAABAAIAAAANAAwAAAABAAEAAAANAAsAAAABAAEAAAANAAoAAAABAAEAAAANAAkAAAABAAEAAAANAAgAAAABAAEAAAANAAcAAAABAAEAAAANAAYAAAABAAEAAAANAAUAAAABAAEAAAANAAQAAAABAAEAAAANAAMAAAABAAAAAAAMAA0AAAABAAIAAAAMAAwAAAABAAEAAAAMAAsAAAABAAEAAAAMAAoAAAABAAEAAAAMAAkAAAABAAEAAAAMAAgAAAABAAEAAAAMAAcAAAABAAEAAAAMAAYAAAABAAEAAAAMAAUAAAABAAEAAAAMAAQAAAABAAEAAAAMAAMAAAABAAAAAAALAA0AAAABAAIAAAALAAwAAAABAAEAAAALAAsAAAABAAEAAAALAAoAAAABAAEAAAALAAkAAAABAAEAAAALAAgAAAABAAEAAAALAAcAAAABAAEAAAALAAYAAAABAAEAAAALAAUAAAABAAEAAAALAAQAAAABAAEAAAALAAMAAAABAAEAAAAWAAUAAAACAAEAAAAWAAQAAAABAAEAAAAWAAMAAAABAAEAAAAWAAIAAAABAAEAAAAWAAEAAAACAAAAAAAVAAUAAAABAAEAAAAVAAQAAAABAAEAAAAVAAMAAAABAAEAAAAVAAIAAAABAAEAAAAVAAEAAAABAAAAAAAUAAUAAAABAAEAAAAUAAQAAAABAAEAAAAUAAMAAAABAAEAAAAUAAIAAAABAAEAAAAUAAEAAAABAAAAAAATAAIAAAABAAEAAAATAAEAAAABAAAAAAASAAIAAAABAAEAAAASAAEAAAABAAAAAAARAAIAAAABAAEAAAARAAEAAAABAAAAAAAQAAIAAAAAAAEAAAAQAAEAAAAAAAAAAAAVAAYAAAABAAIAAAAUAAYAAAABAAEAAAAUAAoAAAACAAIAAAAUAAkAAAACAAEAAAAUAAgAAAACAAEAAAAUAAcAAAACAAEAAAAWAAYAAAACAAIAAAAXAAQAAAACAAIAAAAXAAMAAAACAAEAAAAXAAIAAAACAAAAAAAIAAIAAAABAAAAAAAHAAIAAAAAAAAAAAALAAIAAAACAAAAAAAKAAIAAAABAAAAAAAJAAIAAAABAAAAAAA=")
tile_set = ExtResource("2_p21y6")

[node name="Sand" type="TileMapLayer" parent="Layers"]
tile_map_data = PackedByteArray("AAACAAAAAAAHAAIAAAACAP//AAAHAAEAAAACAP7/AAAHAAAAAAABAAAAAAAGAAIAAAABAP//AAAGAAEAAAABAP7/AAAGAAAAAAAAAAAAAAAGAAIAAAAAAP//AAAGAAEAAAAAAP7/AAAGAAAAAAD//wAAAAAGAAIAAAD/////AAAGAAEAAAD///7/AAAGAAAAAAD+/wAAAAAFAAIAAAD+////AAAFAAEAAAD+//7/AAAFAAAAAAA=")
tile_set = ExtResource("2_p21y6")

[node name="Road" type="TileMapLayer" parent="Layers"]
tile_map_data = PackedByteArray("AAAEAAQAAAAHAAAAAAADAAQAAAAGAAMAAAACAAQAAAAFAAMAAAAEAAgAAAAHAAIAAAAEAAcAAAAIAAEAAAAEAAYAAAAIAAEAAAAEAAUAAAAIAAEAAAADAAgAAAAGAAMAAAACAAgAAAAFAAAAAAACAAsAAAAFAAIAAAACAAoAAAAIAAEAAAACAAkAAAAIAAEAAAAFAAsAAAAHAAAAAAAEAAsAAAAGAAMAAAADAAsAAAAGAAMAAAAFAA0AAAAFAAIAAAAFAAwAAAAIAAEAAAAIAA0AAAAHAAIAAAAHAA0AAAAGAAMAAAAGAA0AAAAGAAMAAAAIAAwAAAAIAAEAAAAIAAsAAAAIAAEAAAAIAAoAAAAIAAEAAAAIAAkAAAAIAAEAAAAIAAgAAAAFAAAAAAALAAgAAAAHAAIAAAAKAAgAAAAGAAMAAAAJAAgAAAAGAAMAAAALAAcAAAAIAAEAAAALAAYAAAAIAAEAAAALAAUAAAAFAAAAAAANAAUAAAAHAAAAAAAMAAUAAAAGAAMAAAANAAsAAAAFAAIAAAANAAoAAAAIAAEAAAANAAkAAAAIAAEAAAANAAgAAAAIAAEAAAANAAcAAAAIAAEAAAANAAYAAAAIAAEAAAAQAAsAAAAHAAIAAAAPAAsAAAAGAAMAAAAOAAsAAAAGAAMAAAAQAAoAAAAIAAEAAAAQAAkAAAAFAAAAAAATAAkAAAAHAAIAAAASAAkAAAAGAAMAAAARAAkAAAAGAAMAAAATAAgAAAAIAAEAAAATAAcAAAAIAAEAAAATAAYAAAAIAAEAAAATAAUAAAAIAAAAAAA=")
tile_set = ExtResource("2_p21y6")

[node name="Bridge" type="TileMapLayer" parent="Layers"]
tile_map_data = PackedByteArray("AAACAAQAAwACAAAAAAABAAQAAwABAAAAAAAAAAQAAwABAAAAAAD//wQAAwABAAAAAAD+/wQAAwAAAAAAAAA=")
tile_set = ExtResource("2_p21y6")

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_h4l07")

[node name="DropControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1567.0
offset_bottom = 1074.0
script = ExtResource("4_b6prr")
metadata/_edit_lock_ = true

[node name="DropArea" type="Area2D" parent="DropControl"]
script = ExtResource("5_ocgwi")
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DropControl/DropArea"]
position = Vector2(4, -8)
polygon = PackedVector2Array(316, 195, 318, 574, 189, 576, 189, 711, 380, 711, 382, 839, 510, 837, 511, 521, 702, 520, 702, 329, 892, 327, 892, 711, 1021, 711, 1022, 585, 1214, 584, 1218, 59, 1030, 61, 1030, 198, 769, 196, 767, 135, 451, 133, 451, 196)
metadata/_edit_lock_ = true

[node name="DropArea2" type="Area2D" parent="DropControl"]
script = ExtResource("5_ocgwi")
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DropControl/DropArea2"]
polygon = PackedVector2Array(68, 313, 256, 313, 256, 511, 129, 511, 130, 767, 320, 767, 319, 895, 576, 894, 577, 577, 767, 576, 768, 384, 833, 383, 835, 769, 1090, 767, 1088, 640, 1278, 639, 1279, 156, 1211, 159, 1209, 58, 1467, 60, 1467, 123, 1530, 123, 1531, 308, 1471, 307, 1470, 436, 1341, 434, 1341, 696, 1280, 695, 1277, 883, 698, 890, 694, 953, 69, 952)
metadata/_edit_lock_ = true

[node name="Buildings" type="Node2D" parent="."]

[node name="Castle" parent="Buildings" instance=ExtResource("3_ho887")]
position = Vector2(1247, 221)

[node name="UpgradeWindow" parent="." instance=ExtResource("7_cn2cc")]
visible = false
z_index = 2500

[node name="BGM" type="AudioStreamPlayer" parent="." groups=["sound"]]
stream = ExtResource("9_kf0gc")
volume_db = -12.0
parameters/looping = true

[node name="PauseScreen" type="Panel" parent="."]
visible = false
z_index = 2000
offset_left = -6.0
offset_top = -8.0
offset_right = 1936.0
offset_bottom = 1085.0

[node name="PauseLabel" type="Label" parent="PauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -9.5
offset_right = 20.0
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 72
text = "Game Paused"

[node name="SideMenu" parent="." instance=ExtResource("6_3eaae")]
z_index = 2000
offset_left = 1537.0
offset_top = 34.0
offset_right = 1887.63
offset_bottom = 1023.0
theme_override_styles/panel = ExtResource("7_0vf1f")

[node name="GameOver" parent="." instance=ExtResource("10_vmlou")]
visible = false
z_index = 2100
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 684.0
offset_top = 410.0
offset_right = 684.0
offset_bottom = 410.0
size_flags_vertical = 4

[node name="WaveIndicator" type="Label" parent="."]
offset_left = 61.0
offset_top = 41.0
offset_right = 129.0
offset_bottom = 60.0
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "Wave: 69"
